Update 이온 3주차 과제.ipynb

--- a/이온 3주차 과제.ipynb
+++ b/이온 3주차 과제.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "from array import array \n",
     "\n",
-    "number_data_array = array('i', map(int,input().split()))\n",
+    "number_data_array = array('i', map(int,input().split(',')))\n",
     "\n",
     "res = len(number_data_array)\n",
     "\n",
