Update 이온 5주차 과제2.ipynb

--- a/이온 5주차 과제2.ipynb
+++ b/이온 5주차 과제2.ipynb
@@ -2,27 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "4f3e6032",
+   "execution_count": 13,
+   "id": "2a6ada8e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2,6,7,3,5,1\n",
-      "2,4,1\n",
-      "3\n"
+      "1,5,2,6,3,7,4\n",
+      "2,5,3\n",
+      "4,4,1\n",
+      "1,7,3\n",
+      "|['1', '5', '2', '6', '3', '7', '4']|[[2, 5, 3], [4, 4, 1], [1, 7, 3]]|[5, 6, 3]|\n"
      ]
     }
    ],
    "source": [
     "array = list(input().split(','))\n",
-    "a, b, c = map(int,input(). split(','))\n",
-    "cut=array[a-1:b]    \n",
-    "cut= list(map(int, cut))\n",
-    "cut.sort()\n",
-    "print(cut[c-1])"
+    "command = [list(map(int, input().split(','))) for _ in range(3)]\n",
+    "result=list(range(0,3))\n",
+    "for i in range(0,3):\n",
+    "    cut=array[command[i][0]-1:command[i][1]]    \n",
+    "    cut= list(map(int, cut))\n",
+    "    cut.sort()\n",
+    "    result[i]=cut[command[i][2]-1]\n",
+    "    \n",
+    "print('|{0}|{1}|{2}|'.format(array,command,result))"
    ]
   }
  ],
